# android_kernel_devices_google_akita

./: BUILD.bazel  akita_gki.fragment  build.config.akita  build_akita.sh  device.bazelrc
display/: BUILD.bazel  panel-google-ak3a.c  panel-google-ak3b.c
dts/: BUILD.bazel
dts/google/: Makefile  zuma-akita-audio.dtsi  zuma-akita-battery.dtsi  zuma-akita-bcl.dtsi  zuma-akita-board.dtsi  zuma-akita-camera.dtsi  zuma-akita-charging.dtsi  zuma-akita-dev1-gnss.dts  zuma-akita-dev1.dts  zuma-akita-dvt1-2nd-fab.dts  zuma-akita-dvt1.dts  zuma-akita-evt1-broadcom-gnss.dts  zuma-akita-evt1-samsung-gnss.dts  zuma-akita-evt1_1.dts  zuma-akita-haptics.dtsi  zuma-akita-mp.dts  zuma-akita-proto1-A0-broadcom-gnss.dts  zuma-akita-proto1-A0-samsung-gnss.dts  zuma-akita-proto1-B1-broadcom-gnss.dts  zuma-akita-proto1-B1-samsung-gnss.dts  zuma-akita-proto1_1-broadcom-gnss-sky.dts  zuma-akita-proto1_1-broadcom-gnss-wingboard.dts  zuma-akita-proto1_1-broadcom-gnss.dts  zuma-akita-proto1_1-samsung-gnss-sky.dts  zuma-akita-proto1_1-samsung-gnss-wingboard.dts  zuma-akita-proto1_1-samsung-gnss.dts  zuma-akita-pvt1.dts  zuma-akita-thermal.dtsi  zuma-akita-touch.dtsi  zuma-akita-typec.dtsi  zuma-akita-wcharger.dtsi
